--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
   ],
   "prefer-stable": true,
   "require": {
-    "php": ">=7.1.0",
+    "php": ">=7.4.0",
     "ext-soap": "*",
-    "jamesiarmes/php-ntlm": "~1.0"
+    "jamesiarmes/php-ntlm": "dev-master"
   },
   "require-dev": {
     "mustache/mustache": "~2.0",
